Camlp5 Version 5.16:
--------------------

* [30 Aug 10] pa_macro.cmo: added ability to use ELSIFDEF and ELSIFNDEF
  in expressions, structure items and signature items.
* [27 Aug 10] Fixed bug in pa_macro.cmo A AND B computed B AND B = B.
* [26 Aug 10] Fixed wrong behaviour: char '"' was printed '\"'.
* [25 Aug 10] Added option -no-opt in configure, not to use .opt versions
  of OCaml compilers.
* [20 Aug 10] Added compatibility for OCaml version 3.11.3.
* [18 Aug 10] Added function "get" in library module "Ploc", and a
  statement "lprintf" similar to "pprintf" added by the syntax
  extension kit "pa_pprintf.cmo".
* [12 Aug 10] Added a new chapter in the documentation "Redefining
  OCaml syntax".

Camlp5 Version 5.15:
--------------------

* [09 Aug 10] Updated compatibility for OCaml current version 3.12.1.
* [09 Aug 10] Upgraded compatibility for OCaml released version 3.12.0.
* [29 Jul 10] Added ability to write AST quotations with a colon before
  the '<' (e.g. "<:expr:< foo >>") which, in pattern position, generates
  a binding of the variable "loc" at the top node:
    1/ normal usage (still working):
         "fun [ <:expr< x >> -> 0 ]"
       which is equivalent to:
         "fun [ MLast.ExLid _ (Ploc.VaVal "x") -> 0 ]
    2/ new usage:
         "fun [ <:expr:< x >> -> 0 ]"
       which is equivalent to:
        "fun [ MLast.ExLid loc (Ploc.VaVal "x") -> 0 ]
* [21 Jun 10] Added compatibility for OCaml trunk version 3.13.0.
* [29 Apr 10] Fixed bug in pr_depend.cmo: a.B.c did not add module B.

Camlp5 Version 5.14:
--------------------

* [28 Apr 10] Updated compatibility for OCaml current version 3.12.0.
* [31 Mar 10] Fixed bug in pr_o.cmo: error message when using "#use"


Camlp5 Version 5.13:
--------------------

* [02 Nov 09] Added compatibility with OCaml 3.11.2.
* [02 Nov 09] Updated compatibility with OCaml 3.12.0.
* [30 Jul 09] Added 'lazy' patterns (added in OCaml version 3.11).