@@ -1,5 +1,5 @@
 #!/bin/sh -e
-# $Id: check_ocaml_versions.sh,v 1.45 2010/09/01 17:07:42 deraugla Exp $
+# $Id: check_ocaml_versions.sh,v 1.46 2010/09/02 03:40:00 deraugla Exp $
 
 TOP=$HOME/work
 DEST=$TOP/usr
@@ -13,7 +13,8 @@ PATH=$(pwd)/bin:$PATH
 
 cd $OCAMLSDIR
 
-dirs=$(ls | grep -v csl | grep -v '^1' | grep -v '^2.00')
+dirs=$(ls | grep -v csl | grep -v '^1' | grep -v '^2.0[0-2]')
+dirs=2.02
 
 # WARNING: on 64 bits arch, rather use this:
 # dirs=$(ls | grep -v csl | grep -v '^[1|2]' | grep -v '^3.0[0-6]')
